# clin-data-pipeline-prod

./: .env.example  .gitignore  README.md  analytics.py  app.py  build_spec.md  eval_metrics.py  evaluate.py  extraction_eval.py  format_jsonl.py  gold.py  provenance.py  pyproject.toml  registry.py  requirements-deid.txt  requirements-dev.txt  requirements-extract.txt  requirements-train.txt  requirements.txt  run_stage01.py  run_stage2.py  run_stage4.py  run_stage5.py  split.py  test_app.py  test_stage01.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage9.py  train_runner.py
.github/workflows/: ci.yml
common/: __init__.py  resilient_client.py
curation/: dq.py  normalize.py  rebalance.py  redact.py  synthesize.py
data/analytics/: pipeline_analytics.parquet
data/canonical/: fhir_bundles.json
data/curated/: normalize_metrics.json  normalized.jsonl  redacted.jsonl  split_test.jsonl  split_train.jsonl  split_val.jsonl  synthesized.jsonl
data/deid/: notes_deid.jsonl  resources_deid.ndjson
data/extracted/: extractions.jsonl
deid/: __init__.py  dateshift.py  freetext.py  leakage.py  redact.py
extraction/: __init__.py  extractor.py
generation/: generate_fhir.py  generate_notes.py  landing.py
omop/: __init__.py  etl.py
terminology/: __init__.py  bind.py  build_dxmed_lookup.py  dxmed.py  dxmed_lookup.json  omop_concept_snapshot.json  snapshot.py  validate.py
training_results/: config.json  eval_predictions.jsonl  eval_report.json  model_card.md  model_registry.json  samples.json  samples.md
(+25 files in other folders)
